--- a/package.json
+++ b/package.json
@@ -1,23 +1,20 @@
 {
   "name": "vue-rgrid",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "author": {
     "name": "Ihoshyn Roman",
     "email": "igoshin18@gmail.com"
   },
   "private": false,
   "scripts": {
-    "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
+    "serve": "vue-cli-service serve --target lib --name rgrid src/main.js",
+    "build": "vue-cli-service build --target lib --name rgrid src/main.js",
     "lint": "vue-cli-service lint"
   },
   "repository": {
     "url": "https://github.com/MasterRO94/vue-rgrid"
   },
-  "main": "dist/js/app.js",
-  "browser": {
-    "./sfc": "src/components/VGrid.vue"
-  },
+  "main": "dist/js/rgrid.common.js",
   "dependencies": {
     "axios": "^0.19.0",
     "core-js": "^3.3.2",
