--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
   "name": "vue-rgrid",
-  "version": "0.1.31",
+  "version": "0.1.32",
   "author": {
     "name": "Ihoshyn Roman",
     "email": "igoshin18@gmail.com"
   },
   "private": false,
   "scripts": {
-    "serve": "vue-cli-service serve --target lib --name rgrid src/main.js",
-    "build": "vue-cli-service build --target lib --name rgrid src/main.js",
+    "serve": "vue-cli-service serve --target lib --name vue-rgrid src/main.js",
+    "build": "vue-cli-service build --target lib --name vue-rgrid src/main.js",
     "lint": "vue-cli-service lint"
   },
   "repository": {
